[gd_scene load_steps=15 format=2]

[ext_resource path="res://UI/SettingsIcon.png" type="Texture" id=1]
[ext_resource path="res://UI/SettingsIconPaused.png" type="Texture" id=2]
[ext_resource path="res://Resources/Fonts/eras-bold-itc/ERASBD.TTF" type="DynamicFontData" id=3]
[ext_resource path="res://Entities/Hints/HintObject.tscn" type="PackedScene" id=4]
[ext_resource path="res://Menus/SettingsMenu.tscn" type="PackedScene" id=5]
[ext_resource path="res://UI/UI.gd" type="Script" id=6]
[ext_resource path="res://Resources/Audio/SFX/WAVs/UI/multimedia_rollover_041.wav" type="AudioStream" id=7]
[ext_resource path="res://UI/Settings/SettingsButtonOrigin.gd" type="Script" id=8]
[ext_resource path="res://Resources/Audio/SFX/WAVs/UI/multimedia_rollover_042.wav" type="AudioStream" id=9]
[ext_resource path="res://Resources/Tilesets/WhiteTile.png" type="Texture" id=10]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 48
font_data = ExtResource( 3 )

[sub_resource type="ParticlesMaterial" id=3]
resource_local_to_scene = true
flag_disable_z = true
direction = Vector3( 1, 0.25, 0 )
gravity = Vector3( 0, 65, 0 )
initial_velocity = 250.0
initial_velocity_random = 1.0
angular_velocity = 200.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.1
hue_variation = 1.0
hue_variation_random = 1.0

[sub_resource type="ParticlesMaterial" id=4]
resource_local_to_scene = true
flag_disable_z = true
direction = Vector3( -1, 0.25, 0 )
gravity = Vector3( 0, 65, 0 )
initial_velocity = 250.0
initial_velocity_random = 1.0
angular_velocity = 200.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.1
hue_variation = 1.0
hue_variation_random = 1.0

[node name="UI" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 6 )

[node name="SettingsMenu" parent="." instance=ExtResource( 5 )]
visible = false

[node name="SettingsButtonOrigin" type="Node2D" parent="."]
pause_mode = 2
position = Vector2( 32.0411, 32.0917 )
script = ExtResource( 8 )
__meta__ = {
"_edit_group_": true
}
rotation_speed = 100
pause_texture = ExtResource( 2 )
unpause_texture = ExtResource( 1 )

[node name="SettingsButton" type="TextureButton" parent="SettingsButtonOrigin"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -24.0
margin_top = -24.0
margin_right = 24.0
margin_bottom = 24.0
texture_normal = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsButtonHoverASP" type="AudioStreamPlayer" parent="SettingsButtonOrigin"]
stream = ExtResource( 7 )
volume_db = -10.0
bus = "Effects"

[node name="SettingsButtonClickASP" type="AudioStreamPlayer" parent="SettingsButtonOrigin"]
stream = ExtResource( 9 )
volume_db = -10.0
bus = "Effects"

[node name="Back" type="Label" parent="."]
margin_left = 46.7392
margin_top = 4.386
margin_right = 202.739
margin_bottom = 60.386
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Back"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HintObject" parent="Back" instance=ExtResource( 4 )]
hint_id = -1
on_transition_duration = 0.2
off_transition_duration = 0.2

[node name="Settings" type="Label" parent="."]
margin_left = 65.3527
margin_top = 4.35266
margin_right = 263.353
margin_bottom = 60.3527
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.215686, 0.443137, 0.556863, 1 )
text = "Settings"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HintObject" parent="Settings" instance=ExtResource( 4 )]
hint_id = -1
on_transition_duration = 0.2
off_transition_duration = 0.2

[node name="Particles2D" type="Particles2D" parent="."]
emitting = false
amount = 100
lifetime = 5.0
process_material = SubResource( 3 )
texture = ExtResource( 10 )

[node name="Particles2D2" type="Particles2D" parent="."]
position = Vector2( 1017.96, 3.36739 )
emitting = false
amount = 100
lifetime = 5.0
process_material = SubResource( 4 )
texture = ExtResource( 10 )
[connection signal="mouse_entered" from="SettingsButtonOrigin/SettingsButton" to="SettingsButtonOrigin" method="_on_SettingsButton_mouse_entered"]
[connection signal="mouse_exited" from="SettingsButtonOrigin/SettingsButton" to="SettingsButtonOrigin" method="_on_SettingsButton_mouse_exited"]
[connection signal="pressed" from="SettingsButtonOrigin/SettingsButton" to="SettingsButtonOrigin" method="_on_SettingsButton_pressed"]
